Add jellyfish drone and update git submodules

--- a/.gitmodules
+++ b/.gitmodules
@@ -62,3 +62,7 @@
 	path = src/modules/uxrce_dds_client/Micro-XRCE-DDS-Client
 	url = https://github.com/PX4/Micro-XRCE-DDS-Client.git
 	branch = px4
+[submodule "Tools/simulation/gz/models/uav2_description"]
+	path = Tools/simulation/gz/models/uav2_description
+	url = https://github.com/BumblebeeAS/uav2_description.git
+	branch = main
